--- a/Mappy Project/Mappy Project.vcxproj.filters
+++ b/Mappy Project/Mappy Project.vcxproj.filters
@@ -36,4 +36,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="GoldenAge.ttf" />
+  </ItemGroup>
 </Project>
